tests/ui/args-flatten-non-args.stderr
error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:6:11
   |
 6 |     deep: Deep,
   |           ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:9:1
   |
 9 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:3:10
   |
 3 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
11 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:14:11
   |
14 |     deep: Subcmd,
   |           ^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:18:1
   |
18 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:3:10
   |
 3 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
11 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)
